Synchronize with monorepo state (aligned history)