@@ -6,7 +6,7 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.reactive.CorsWebFilter;
 import org.springframework.web.cors.reactive.UrlBasedCorsConfigurationSource;
 
-import java.util.List;
+import java.util.Collections;
 
 @Configuration
 public class CorsConfig {
@@ -14,9 +14,10 @@ public class CorsConfig {
     @Bean
     public CorsWebFilter corsWebFilter() {
         CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOriginPatterns(List.of("*"));
-        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
-        config.setAllowedHeaders(List.of("*"));
+        config.addAllowedOriginPattern("*");         // Allow all origins
+        config.addAllowedMethod("*");                // Allow GET, POST, PUT, PATCH, DELETE, OPTIONS
+        config.addAllowedHeader("*");                // Allow all headers
+        config.setExposedHeaders(Collections.singletonList("*")); // Expose all response headers
         config.setAllowCredentials(true);
         config.setMaxAge(3600L);
 
